--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,13 @@
       }
     </script>
     
-    <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-QCJW424HJY"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCJW424HJY"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-QCJW424HJY');
-    </script-->
+    </script>
   </body>  
 </html>
